css/style.css
/* ... */
.scroll-up-btn:hover {
  filter: brightness(90%);
}

/* home section styling */
.home {
  display: flex;
  background: #111;
  height: 100vh;
  color: #fff;
  min-height: 500px;
  background-size: cover;
  background-attachment: fixed;
  font-family: "Ubuntu", sans-serif;
}
.home .max-width {
  width: 100%;
  display: flex;
}
.home .max-width .row {
  margin-right: 0;
}
.home .home-content .text-1 {
  font-size: 27px;
}
.home .home-content .text-2 {
  font-size: 75px;
  font-weight: 600;
  margin-left: -3px;
}
.home .home-content .text-3 {
  font-size: 40px;
  margin: 5px 0;
}
.home .home-content .text-3 span {
  color: crimson;
  font-weight: 500;
}
.home .home-content a {
  display: inline-block;
  background: crimson;
  color: #fff;
  font-size: 25px;
  padding: 12px 36px;
  margin-top: 20px;
  font-weight: 400;
  border-radius: 6px;
  border: 2px solid crimson;
  transition: all 0.3s ease;
}
.home .home-content a:hover {
  color: crimson;
  background: none;
}

/* about section styling */
.about .title::after {
  content: "who i am";
}
.about .about-content .left {
  width: 45%;
}
.about .about-content .left img {
  height: 400px;
  width: 400px;
  object-fit: cover;
  border-radius: 6px;
}
.about .about-content .right {
  width: 55%;
}
.about .about-content .right .text {
  font-size: 25px;
  font-weight: 600;
  margin-bottom: 10px;
}
.about .about-content .right .text span {
  color: crimson;
}
.about .about-content .right p {
  text-align: justify;
}
.about .about-content .right a {
  display: inline-block;
  background: crimson;
  color: #fff;
  font-size: 20px;
  font-weight: 500;
  padding: 10px 30px;
  margin-top: 20px;
  border-radius: 6px;
  border: 2px solid crimson;
  transition: all 0.3s ease;
}
.about .about-content .right a:hover {
  color: crimson;
  background: none;
}

/* services section styling */
.services,
.teams {
  color: #fff;
  background: #111;
}
.services .title::before,
.teams .title::before {
  background: #fff;
}
.services .title::after,
.teams .title::after {
  background: #111;
  content: "what i have done";
}
.services .serv-content .card {
  width: calc(33% - 20px);
  background: #222;
  text-align: center;
  border-radius: 6px;
  padding: 50px 25px;
  cursor: pointer;
  transition: all 0.3s ease;
  margin: 5px;
  height: 350px;
}
.services .serv-content .card:hover {
  background: crimson;
}
.services .serv-content .card .box {
  transition: all 0.3s ease;
}
.services .serv-content .card:hover .box {
  transform: scale(1.05);
}
.services .serv-content .card img {
  padding: 0;
  height: 100%;
  width: 100%;
  color: crimson;
  transition: color 0.3s ease;
}

.services .serv-content .card i {
  font-size: 160px;
  color: crimson;
  transition: color 0.3s ease;
}

.services .serv-content .card:hover i {
  color: #fff;
}
.services .serv-content .card .text {
  font-size: 25px;
  font-weight: 500;
  margin: 50px 0 7px 0;
}

/* skills section styling */

.skills .title::after {
  content: "what i know";
}
.skills .skills-content .column {
  width: calc(50% - 30px);
}
.skills .skills-content .left .text {
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 10px;
}
.skills .skills-content .left p {
  text-align: justify;
}
.skills .skills-content .left a {
  display: inline-block;
  background: crimson;
  color: #fff;
  font-size: 18px;
  font-weight: 500;
  padding: 8px 16px;
  margin-top: 20px;
  border-radius: 6px;
  border: 2px solid crimson;
  transition: all 0.3s ease;
}
.skills .skills-content .left a:hover {
  color: crimson;
  background: none;
}
.skills .skills-content .right .bars {
  margin-bottom: 15px;
}
.skills .skills-content .right .info {
  display: flex;
  margin-bottom: 5px;
  align-items: center;
  justify-content: space-between;
}
.skills .skills-content .right span {
  font-weight: 500;
  font-size: 18px;
}
.skills .skills-content .right .line {
  height: 5px;
  width: 100%;
  background: lightgrey;
  position: relative;
}
.skills .skills-content .right .line::before {
  content: "";
  position: absolute;
  height: 100%;
  left: 0;
  top: 0;
  background: crimson;
}
.skills-content .right .html::before {
  width: 90%;
}
.skills-content .right .css::before {
  width: 60%;
}
.skills-content .right .js::before {
  width: 50%;
}
.skills-content .right .python::before {
  width: 70%;
}
.skills-content .right .mysql::before {
  width: 60%;
}

/* teams section styling */
.teams .title::after {
  content: "who with me";
}
.teams .carousel .card {
  background: #222;
  border-radius: 6px;
  padding: 25px 35px;
  text-align: center;
  overflow: hidden;
  transition: all 0.3s ease;
}
.teams .carousel .card:hover {
  background: crimson;
}
.teams .carousel .card .box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: all 0.3s ease;
}
.teams .carousel .card:hover .box {
  transform: scale(1.05);
}
.teams .carousel .card .text {
  font-size: 25px;
  font-weight: 500;
  margin: 10px 0 7px 0;
}
.teams .carousel .card img {
  height: 150px;
  width: 150px;
  object-fit: cover;
  border-radius: 50%;
  border: 5px solid crimson;
  transition: all 0.3s ease;
}
.teams .carousel .card:hover img {
  border-color: #fff;
}
.owl-dots {
  text-align: center;
  margin-top: 20px;
}
.owl-dot {
  height: 13px;
  width: 13px;
  margin: 0 5px;
  outline: none !important;
  border-radius: 50%;
  border: 2px solid crimson !important;
  transition: all 0.3s ease;
}
.owl-dot.active {
  width: 35px;
  border-radius: 14px;
}
.owl-dot.active,
.owl-dot:hover {
  background: crimson !important;
}

/* contact section styling */
.contact .title::after {
  content: "get in touch";
}
.contact .contact-content .column {
  width: calc(50% - 30px);
}
.contact .contact-content .text {
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 10px;
}
.contact .contact-content .left p {
  text-align: justify;
}
.contact .contact-content .left .icons {
  margin: 10px 0;
}
/* ... */

